service.yaml
kind: Service
apiVersion: v1
metadata:
  name: weather-app
  labels:
    app: weather-app
spec:
  selector:
    app: weather-app
  type: NodePort
  ports:
    - name: web
      port: 8080
      nodePort: 31000
