ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
spec:
  rules:
    - host: weather.com
      http:
        paths:
          - path: /v1/weather
            pathType: Prefix
            backend:
              service:
                name: weather-app
                port:
                  number: 8080
